сделал тестовый post addMass и get getClass
